fix(file): harden upload type and inline delivery